--- a/style.css
+++ b/style.css
@@ -8,14 +8,19 @@
 
 body {
     background-color: #282828;
+    color: #e6e6e6; 
 }
 
 #hero-section {
     height: 100vh;
     width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #hero-title {
     font-family: 'Poppins', sans-serif;
     font-size: 35px;
+    font-weight: 200;   
 }
