--- a/style.css
+++ b/style.css
@@ -19,8 +19,23 @@ body {
     align-items: center;
 }
 
-#hero-title {
+#hero-section > canvas {
+    position: absolute;
+    left: 0px;
+    top: 0px;   
+}
+
+#hero-title > h1 {
     font-family: 'Poppins', sans-serif;
-    font-size: 35px;
-    font-weight: 200;   
+    font-size: 50px;
+    text-transform: uppercase;
+    letter-spacing: 5px;
+    font-weight: 200;
+}
+
+#hero-title > p {
+    font-family: 'Noto Sans Mono', monospace;
+    font-weight: 100;
+    text-transform: lowercase;
+    font-size: 12px;
 }
