--- a/style.css
+++ b/style.css
@@ -9,23 +9,54 @@
 body {
     background-color: #282828;
     color: #e6e6e6; 
+    overflow-x: hidden;
 }
 
 #hero-section {
     height: 100vh;
     width: 100vw;
-    display: flex;
+    display: flex;   
     justify-content: center;
     align-items: center;
+    z-index: 100;
+}
+
+
+a {
+    text-decoration: none;
+    color: #e6e6e6;
+    cursor: pointer;
+}
+
+ul {
+    list-style: none;
 }
 
 #hero-section > canvas {
     position: absolute;
     left: 0px;
-    top: 0px;   
+    top: 0px;
+    z-index: -100;
 }
 
-#hero-title > h1 {
+#hero-title-left {
+    padding-right: 15px;
+    border-right: #e6e6e698 solid 5px;
+}
+
+#hero-title-right {
+    font-family: 'Noto Sans Mono';
+    font-size: 13px;
+    font-weight: 200;
+    padding-left: 15px;
+}
+
+#hero-title {
+    display: flex;
+    flex-direction: row; 
+}
+
+h1 {
     font-family: 'Poppins', sans-serif;
     font-size: 50px;
     text-transform: uppercase;
@@ -33,9 +64,112 @@ body {
     font-weight: 200;
 }
 
-#hero-title > p {
+::-webkit-scrollbar {
+    background-color: #282828;
+    width: 12px;
+}
+
+::-webkit-scrollbar-thumb {
+    width: 10px;
+    border-radius: 10px;
+    background-color: #545454;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+}
+
+#projects {
+    width: 100vw;
+    height: 100vh;
+    background-color: #1b1b1b;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#projects-container {
+    height: 70%;
+    width: 80%;
+    position: relative;
+    text-align: center;
+}
+
+#projects::before {
+    content: '';
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 80px;
+    background: linear-gradient(#282828, transparent);
+}
+
+p {
     font-family: 'Noto Sans Mono', monospace;
     font-weight: 100;
     text-transform: lowercase;
+    text-align: center;
     font-size: 12px;
+}
+
+#projects-container::before {
+    position: absolute;
+    left: 50%;
+    bottom: 7.5px;
+    content: '';
+    width: 80%;
+    border-radius: 50%;
+    height: 2px;
+    background-color: #e6e6e6a4;
+    transform: translate(-50%);
+    -webkit-transform: translate(-50%);
+    -moz-transform: translate(-50%);
+    -ms-transform: translate(-50%);
+    -o-transform: translate(-50%);
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+}
+
+#projects-container::after {
+    position: absolute;
+    left: 50%;
+    bottom: 0px;
+    border-radius: 2px;
+    content: '';
+    width: 10px;
+    height: 10px;
+    background-color: #e6e6e6;
+    transform: rotate(45deg) translate(-50%);
+    -webkit-transform: rotate(45deg) translate(-50%);
+    -moz-transform: rotate(45deg) translate(-50%);
+    -ms-transform: rotate(45deg) translate(-50%);
+    -o-transform: rotate(45deg) translate(-50%);
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    -ms-border-radius: 2px;
+    -o-border-radius: 2px;
+}
+
+#hero-nav {
+    height: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: column;
+}
+
+.hero-nav-item:hover {
+    font-weight: 400;
+}
+
+#project-list {
+    width: 100%;
+    height: 79%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: 'Noto Sans Mono', monospace;
 }
