--- a/chloe.css
+++ b/chloe.css
@@ -45,6 +45,16 @@ ul {
     flex-direction: row; 
 }
 
+#hero-title-left {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+label {
+    margin-left: 10px;
+}
+
 h1 {
     font-family: 'Poppins', sans-serif;
     font-size: 50px;
@@ -75,6 +85,7 @@ p {
     /* text-transform: lowercase; */
     text-align: center;
     font-size: 12px;
+    margin-bottom: 10px;
 }
 
 #hero-nav {
