--- a/greg/style.css
+++ b/greg/style.css
@@ -7,7 +7,12 @@
 }
 
 #greg-section {
+    height: 100vh;
+    width: 100vw;
     background-color: #282828;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #title {
