--- a/greg/style.css
+++ b/greg/style.css
@@ -24,4 +24,10 @@
 #links {
     list-style: none;
     font-family: 'Noto Sans Mono', monospace;
+    color: #e9e9e9;
+}
+
+#link > a {
+    text-decoration: none;
+    color: #e9e9e9;
 }
