--- a/greg/style.css
+++ b/greg/style.css
@@ -11,12 +11,14 @@
     width: 100vw;
     background-color: #282828;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
 #title {
     font-family: 'Poppins', sans-serif;
+    margin-bottom: 100px;
     font-size: 40px;
     color: #e9e9e9;
 }
@@ -27,7 +29,7 @@
     color: #e9e9e9;
 }
 
-#link > a {
+.link > a {
     text-decoration: none;
     color: #e9e9e9;
 }
