--- a/greg/style.css
+++ b/greg/style.css
@@ -11,7 +11,7 @@
     width: 100vw;
     background-color: #282828;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
 }
@@ -26,6 +26,7 @@
 #links {
     list-style: none;
     font-family: 'Noto Sans Mono', monospace;
+    font-size: 14px;
     color: #e9e9e9;
 }
 
