--- a/greg/style.css
+++ b/greg/style.css
@@ -6,31 +6,88 @@
     padding: 0;
 }
 
+#greg-section > canvas {
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    z-index: -100;
+}
+
+body {
+    background-color: #282828;
+}
+
 #greg-section {
+    z-index: 10;
     height: 100vh;
     width: 100vw;
-    background-color: #282828;
+    background-color: transparent;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
 }
 
 #title {
     font-family: 'Poppins', sans-serif;
-    margin-bottom: 100px;
-    font-size: 40px;
-    color: #e9e9e9;
+    justify-self: stretch;
+    text-transform: uppercase;
+    -webkit-text-stroke: #d79921 2px;
+    margin-bottom: 20px;
+    font-size: 100px;
+    color: transparent;
+    position: relative;
 }
 
+#title::before {
+    position: absolute;
+    content: 'Greg';
+    text-transform: uppercase;
+    font-family: 'Poppins', sans-serif;
+    justify-self: stretch;
+    -webkit-text-stroke: #d79921 5px;
+    margin-bottom: 20px;
+    font-size: 100px;
+    color: transparent;
+    filter: blur(5px);
+    -webkit-filter: blur(5px);
+}
+
+#title::after {
+    position: absolute;
+    bottom: -75%;
+    left: 0px;
+    content: 'Greg';
+    transform: rotateX(180deg);
+    text-transform: uppercase;
+    font-family: 'Poppins', sans-serif;
+    justify-self: stretch;
+    background: linear-gradient(transparent 40%, #d79921 100%);
+    opacity: 0.2;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -webkit-text-stroke: linear-gradient(transparent 0%, #d79921 50%) 5px;
+    margin-bottom: 20px;
+    font-size: 100px;
+    color: transparent;
+    filter: blur(6px);
+    -webkit-transform: rotateX(180deg);
+    -moz-transform: rotateX(180deg);
+    -ms-transform: rotateX(180deg);
+    -o-transform: rotateX(180deg);
+}
+
+
 #links {
+    z-index: 100;
     list-style: none;
     font-family: 'Noto Sans Mono', monospace;
     font-size: 14px;
-    color: #e9e9e9;
+    color: #fbf1c7;
 }
 
 .link > a {
     text-decoration: none;
-    color: #e9e9e9;
+    color: #fbf1c7;
 }
