--- a/greg/style.css
+++ b/greg/style.css
@@ -34,15 +34,15 @@ body {
     justify-self: stretch;
     text-transform: uppercase;
     -webkit-text-stroke: #d79921 2px;
-    margin-bottom: 20px;
+    margin-bottom: 40px;
     font-size: 100px;
     color: transparent;
-    position: relative;
+    position: absolute;
 }
 
 #title::before {
     position: absolute;
-    content: 'Greg';
+    content: 'Elia';
     text-transform: uppercase;
     font-family: 'Poppins', sans-serif;
     justify-self: stretch;
@@ -58,7 +58,7 @@ body {
     position: absolute;
     bottom: -75%;
     left: 0px;
-    content: 'Greg';
+    content: 'Elia';
     transform: rotateX(180deg);
     text-transform: uppercase;
     font-family: 'Poppins', sans-serif;
@@ -82,10 +82,21 @@ body {
 #links {
     z-index: 100;
     list-style: none;
+    position: absolute;
+    top: 55%;
     font-family: 'Noto Sans Mono', monospace;
     font-size: 14px;
     color: #fbf1c7;
 }
+
+.link {
+    padding: 0px 20px;
+}
+
+.link:hover {
+    text-shadow: 0px 0px 10px #fbf1c7;
+}
+
 
 .link > a {
     text-decoration: none;
