--- a/ayu/index.css
+++ b/ayu/index.css
@@ -268,3 +268,51 @@ body {
     -o-border-radius: 10px; 
     background-color: var(--ee-coffee-brown);
 }
+
+#audio {
+    position: absolute;
+    right: 0px;
+    bottom: 0px;
+}
+
+#messages {
+    box-shadow: inset 20px 20px 100px -20px #00000079,
+    inset -20px -20px 100px -20px #00000079;
+    height: 100vh;  
+    background-color: var(--coffee-brown); 
+}
+
+#message-container {
+    width: 85vw;
+    height: 100%;
+    color: var(--khai-beige);
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.card {
+    padding: 20px 30px;
+    height: 20vh;
+    width: 45%;
+    background-color: var(--coffee-brown);
+    border-radius: 50px;
+    box-shadow:  20px 20px 60px #583c2e,
+             -20px -20px 60px #76523e;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+}
+
+.name {
+    font-family: 'Poppins', sans-serif;
+    margin-bottom: 5px;
+}
+
+.message {
+    padding-left: 15px;
+    border-left: var(--ee-bear-brown) 5px solid;
+    font-family: 'Nunito', sans-serif;
+}
